--- a/katz/css/main.css
+++ b/katz/css/main.css
@@ -23,14 +23,14 @@ svg {
 }
 
 svg .axis {
-    stroke: #000;
-    stroke-width: 0.1px;
+    stroke: #eee;
+    stroke-width: 1px;
 }
 
 svg .level {
-    stroke: #000;
+    stroke: #999;
     opacity: 0.7;
-    stroke-width: 0.1px;
+    stroke-width: 1px;
 }
 
 svg .column .background {
