--- a/katz/css/main.css
+++ b/katz/css/main.css
@@ -8,11 +8,45 @@ body {
     font-family: Arial;
 }
 
+h1 {
+    text-align: center;
+    font-family: "Open Sans";
+    margin: 15px 0 0;
+    font-weight: normal;
+    font-size: 20px;
+    color: #444;
+}
+
+#buttons {
+    position: relative;
+    width: 150px;
+    left: 50%;
+    margin-left: -31px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+#buttons div {
+    position: relative;
+    float: left;
+    margin-right: 10px;
+}
+
+#buttons div:not(.active) {
+    border-bottom: 1px dashed rgb(44, 108, 181);
+    color: rgb(44, 108, 181);
+    cursor: pointer;
+}
+
+#buttons div.active {
+    color: #7B837B;
+}
+
 #svgContainer {
     position: absolute;
     left: 0;
     right: 0;
-    top: 0;
+    top: 65px;
     bottom: 0;
     overflow: hidden;
 }
@@ -25,6 +59,7 @@ svg {
 svg .axis {
     stroke: #eee;
     stroke-width: 1px;
+    fill: #eee;
 }
 
 svg .level {
@@ -40,14 +75,31 @@ svg .column .background {
 svg .column .number {
     stroke: white;
     stroke-width: 0.5;
+    transition: opacity 0.3s ease-out 0;
 }
 
 svg .column .allNumber {
     fill: #6EDE64;
 }
 
-svg .column:hover .number {
+svg .column .maleNumber {
+    fill: rgb(135, 188, 232);
+}
+
+svg .column .femaleNumber {
+    fill: rgb(247, 167, 200);
+}
+
+svg .column:hover .allNumber {
     fill: #96F48D;
+}
+
+svg .column:hover .maleNumber {
+    fill: rgb(179, 212, 239);
+}
+
+svg .column:hover .femaleNumber {
+    fill: rgb(249, 196, 218);
 }
 
 svg .column:hover .background {
@@ -55,11 +107,11 @@ svg .column:hover .background {
 }
 
 svg #axises text {
-    fill: #ccc;
+    fill: #bbb;
     font-size: 10px;
 }
 
-svg #level text {
+svg #level text, svg #level2 text {
     font-family: Arial Ruble;
     font-size: 10px;
     fill: #175A11;
