--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    margin: 20px 15% 100px 10%;
+    margin: 25px 15% 25px 10%;
     font-family: 'Roboto Slab', serif;
     font-size: 14px;
     background: #F0EFED;
@@ -66,6 +66,11 @@ a:hover {
     height: 175px;
     margin-bottom: 25px;
     margin-left: 120px;
+}
+
+#copy {
+    margin-left: 0px;
+    margin-top: 75px;
 }
 
 ul {
