--- a/katz/css/timeline.css
+++ b/katz/css/timeline.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial;
+    font-family: "Open Sans";
 }
 
 h1 {
@@ -9,7 +9,7 @@ h1 {
     margin: 15px 0 0;
     font-weight: normal;
     font-size: 20px;
-    color: #444;
+    color: #777;
 }
 
 #svgContainer {
@@ -27,10 +27,46 @@ svg {
     height: 100%;
 }
 
+svg .dayColumn {
+    opacity: 0.6;
+}
+
+svg .dayColumn.selected {
+    opacity: 1;
+}
+
 svg .dayColumn path {
     stroke: #39A10A;
     stroke-width: 0.5;
-    fill: none;
+    fill: #EBFAE8;
+}
+
+svg .dayColumn.selected path {
+    fill: #E3F7DF;
+}
+
+svg .background {
+    opacity: 0.5;
+}
+
+svg .leftBackground, svg .rightBackground {
+    opacity: 0.5;
+}
+
+svg .foreground {
+    opacity: 0;
+}
+
+svg .background.selected {
+    opacity: 1;
+}
+
+svg .topBackground {
+    fill: url(#backgroundGrad);
+}
+
+svg .bottomBackground {
+    fill: url(#ground);
 }
 
 svg .donate {
@@ -41,4 +77,22 @@ svg .donate {
 svg #timeAxis line {
     stroke: #39A10A;
     stroke-width: 0.5;
+    opacity: 0.6;
+}
+
+svg .day {
+    opacity: 0.5;
+    text-anchor: middle;
+    font-size: 10px;
+}
+
+svg .selected .day {
+    opacity: 1;
+    text-anchor: middle;
+    font-size: 10px;
+}
+
+svg .month {
+    fill: #d5d5d5;
+    font-size: 10px;
 }
