--- a/katz/css/timeline.css
+++ b/katz/css/timeline.css
@@ -25,6 +25,7 @@ h1 {
 svg {
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 svg .dayColumn {
@@ -93,6 +94,6 @@ svg .selected .day {
 }
 
 svg .month {
-    fill: #d5d5d5;
+    fill: #c5c5c5;
     font-size: 10px;
 }
