--- a/rts/main.css
+++ b/rts/main.css
@@ -8,12 +8,16 @@ label {
     margin-bottom: 10px;
 }
 
+label input {
+    height: 20px;
+}
+
 label span {
     display: inline-block;
     width: 200px;
     text-align: right;
 }
 
-button {
+#buttonGroup {
     margin: 0 0 10px 205px;
 }
