--- a/shoreditch/css/style.css
+++ b/shoreditch/css/style.css
@@ -2,25 +2,42 @@
   font-family: urban;
   src: url(Urban.ttf); }
 
+@font-face {
+  font-family: dense;
+  src: url(Dense-Regular.otf); }
+
 body, html {
   padding: 0;
   margin: 0;
   height: 100%;
-  font-family: Arial; }
+  font-family: dense; }
 
 h1 {
-  font-family: urban, Arial;
+  font-family: urban, dense;
   font-weight: normal;
-  text-transform: uppercase;
-  font-size: 42px;
+  /*text-transform: uppercase;*/
+  font-size: 70px;
   margin: 22px 20px 0;
-  color: #222; }
+  color: black; }
 
 body {
-  font-family: Arial; }
+  font-family: dense, Arial; }
 
 * {
   box-sizing: border-box; }
+
+input[type=text]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0; }
+
+input[type=text]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0; }
+
+input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration {
+  display: none; }
 
 
 .m-map {
@@ -109,11 +126,11 @@ body {
   .m-map__photos__location--minified:after {
     content: attr(data-count);
     position: absolute;
-    bottom: -15px;
-    left: 0px;
-    font-size: 12px;
+    bottom: -20px;
+    left: 2px;
+    font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: black;
     padding: 1 1px;
     background: rgba(235, 235, 235, 0.5); }
 
@@ -207,8 +224,8 @@ body {
   .m-filter .counter {
     position: absolute;
     left: 20px;
-    top: 23px;
-    font-size: 14px;
+    top: 18px;
+    font-size: 25px;
     color: #ccc;
     text-transform: uppercase; }
     .m-filter .counter:after {
@@ -216,15 +233,16 @@ body {
 
 .searchField {
   position: absolute;
-  right: 20px;
-  top: 16px;
-  width: 200px;
+  right: 25px;
+  top: 12px;
+  width: 150px;
   padding: 5px 7px;
-  background-color: #ECF0F1;
+  font-family: dense;
+  background-color: #E6E6E6;
+  color: #808080;
   float: right;
   border: none;
-  text-transform: uppercase;
-  font-size: 14px; }
+  font-size: 25px; }
 
 .m-photos__set {
   position: absolute;
@@ -260,8 +278,14 @@ body {
   z-index: 100;
   overflow: auto;
   padding: 20px;
-  color: #999;
-  font-size: 14px; }
+  color: #E6E6E6;
+  font-size: 30px; }
+
+.m-photos__big__inner {
+  position: relative;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto; }
 
 .m-photos__big__photo {
   position: relative;
@@ -269,7 +293,8 @@ body {
   padding-top: 100%;
   box-sizing: initial;
   margin-top: 40px;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  background-size: cover; }
 
 .m-photos__big__meta {
   position: relative;
@@ -292,10 +317,13 @@ body {
 
 .m-photos__big__close {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 0px;
+  top: -40px;
   color: #fff;
-  text-decoration: none; }
+  text-decoration: none;
+  font-size: 30px; }
+  .m-photos__big__close:hover {
+    color: #9E005D; }
 
 .m-timeline-b {
   position: relative;
@@ -304,7 +332,7 @@ body {
   overflow: hidden;
   margin-top: 10px;
   text-anchor: middle;
-  font-size: 14px; }
+  font-size: 17px; }
   .m-timeline-b .tick {
     z-index: 100; }
     .m-timeline-b .tick text {
