--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     background: #fefefe;
-    color: #111111;
+    color: #111;
     line-height: 1.5;
     padding: 0 15px;
 }
@@ -34,7 +34,7 @@ a:hover {
 
 #content {
     position: relative;
-    max-width: 650px;
+    max-width: 670px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -52,8 +52,9 @@ a:hover {
 
 .project {
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     overflow: hidden;
+    padding: 0 10px;
 }
 
 .project div {
@@ -68,13 +69,17 @@ a:hover {
     height: 100px;
     margin-top: 6px;
     background: silver;
+    margin-bottom: 10px;
 }
 
 .screenshot img {
     display: block;
+    position: relative;
+    top: -1px;
     width: 100px;
     height: 100px;
-    box-shadow: 0 0 10px rgba(220,220,220,0.1);
+    border-top: 1px solid #111;
+    border-bottom: 1px solid #111;
 }
 
 .title {
@@ -90,6 +95,7 @@ a:hover {
 .description {
     margin-left: 307px;
     color: #2E353D;
+    padding-bottom: 10px;
 }
 
 #copy {
