--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,8 @@ a:hover {
     top: -1px;
     width: 100px;
     height: 100px;
-    border-top: 1px solid #111;
-    border-bottom: 1px solid #111;
+    border-top: 1px dotted #777;
+    border-bottom: 1px dotted #777;
 }
 
 .title {
