--- a/duma/v2/style.css
+++ b/duma/v2/style.css
@@ -19,3 +19,11 @@ svg .fraction rect {
 svg .fraction path {
     stroke: none;
 }
+
+svg .transition {
+    stroke: none;
+}
+
+svg .transitions .jump .transition {
+    opacity: .2;
+}
