--- a/duma/v2/style.css
+++ b/duma/v2/style.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
-    background: #fafafa;
+    background: #171717;
 }
 
 svg {
+    margin-top: 20px;
     width: 100%;
     height: 500px;
 }
@@ -21,9 +22,9 @@ svg .fraction path {
 }
 
 svg .transition {
-    stroke: none;
+    opacity: .8;
 }
 
 svg .transitions .jump .transition {
-    opacity: .2;
+    opacity: .3;
 }
