--- a/duma/v2/style.css
+++ b/duma/v2/style.css
@@ -1,17 +1,61 @@
+@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
+
 body {
     margin: 0;
     background: #171717;
+    color: #9a9a9a;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+#wrap {
+    position: relative;
+    width: 100%;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+}
+
+#diagram {
+    position: fixed;
+    top: 84px;
+}
+
+h1 {
+    position: fixed;
+    display: block;
+    top: 0;
+    margin: 20px 0 40px;
+    left: 50%;
+    margin-left: -133px;
+    font-weight: normal;
+    font-size: 18px;
+    color: #eee;
 }
 
 svg {
-    margin-top: 20px;
-    width: 100%;
-    height: 500px;
+    position: relative;
+    margin-top: 0px;
+    width: 1000px;
+    height: 570px;
 }
 
 svg .convocation line {
     stroke: #000;
 }
+
+svg .convocationYears {
+    text-anchor: middle;
+    fill: #9a9a9a;
+    font-size: 12px;
+}
+
+svg .convocationNumber {
+    text-anchor: middle;
+    fill: #eee;
+    font-size: 14px;
+}
+
 
 svg .fraction rect {
     stroke: none;
@@ -26,5 +70,82 @@ svg .transition {
 }
 
 svg .transitions .jump .transition {
-    opacity: .3;
+    opacity: .5;
+}
+
+#rightPanel {
+    position: absolute;
+    right: 0px;
+    top: 134px;
+    width: 210px;
+    background: rgb(23, 23, 23);
+    box-shadow: 0 0 50px #171717;
+}
+
+h2 {
+    position: fixed;
+    background: #171717;
+    top: 0;
+    width: 210px;
+    height: 51px;
+    padding-top: 84px;
+    margin: 0;
+    text-align: center;
+    font-weight: normal;
+    font-size: 14px;
+    color: #eee;
+    z-index: 1;
+
+    border-bottom: 1px solid #171717;
+    box-shadow: 0 0 0px #171717;
+
+    -webkit-transition: border-bottom .3s, box-shadow .3s;
+    transition: border-bottom .3s, box-shadow .3s;
+}
+
+h2.scroll {
+    border-bottom: 1px solid #2e2e2e;
+    box-shadow: 0 0 50px #171717;
+}
+
+.deputies {
+    box-sizing: border-box;
+    position: relative;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    margin-top: -5px;
+}
+
+.deputies .deputat {
+    position: relative;
+    margin: 3px 0;
+}
+
+.deputies .deputat .deputatName {
+    color: #9a9a9a;
+    position: relative;
+    margin-left: 65px;
+    font-size: 12px;
+}
+
+.depConvos {
+    position: absolute;
+    left: 0;
+    top: 7px;
+    width: 70px;
+}
+
+.depConvo {
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    margin-right: 2px;
+}
+
+.depConvo.empty {
+    border: 1px solid #333;
 }
