--- a/duma/v2/style.css
+++ b/duma/v2/style.css
@@ -53,6 +53,16 @@ svg .convocationYears {
     font-size: 12px;
 }
 
+svg .fraction {
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
+}
+
+svg .transition {
+    -webkit-transition: opacity .5s;
+    transition: opacity .5s;
+}
+
 svg .convocationNumber {
     text-anchor: middle;
     fill: #eee;
@@ -65,11 +75,17 @@ svg .fraction rect {
 }
 
 svg .fraction .fractionLabel {
-    display: none;
+    opacity: 0;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
 }
 
 svg .fraction.active .fractionLabel {
-    display: inline;
+    opacity: 1;
+}
+
+svg .fraction.selected .fractionLabel {
+    opacity: 1;
 }
 
 svg .fractionLabel rect {
@@ -84,7 +100,7 @@ svg .fractionLabel text {
 }
 
 svg .transition {
-    opacity: .8;
+    opacity: .7;
     cursor: pointer;
 }
 
@@ -92,18 +108,21 @@ svg .transitions .jump .transition {
     opacity: .5;
 }
 
+svg .faded:not(.active) {
+    opacity: .2 !important;
+}
+
 #rightPanel {
     position: absolute;
-    right: 0px;
+    right: 10px;
     top: 134px;
     width: 210px;
     background: rgb(23, 23, 23);
     box-shadow: 0 0 50px #171717;
 }
 
-h2 {
+#listHeader {
     position: fixed;
-    background: #171717;
     top: 0;
     width: 210px;
     height: 51px;
@@ -113,6 +132,7 @@ h2 {
     font-weight: normal;
     font-size: 14px;
     color: #eee;
+    background: rgba(21, 21, 21, .85);
     z-index: 1;
 
     border-bottom: 1px solid #171717;
@@ -122,9 +142,55 @@ h2 {
     transition: border-bottom .3s, box-shadow .3s;
 }
 
-h2.scroll {
-    border-bottom: 1px solid #666;
+#listHeader.scroll {
+    border-bottom: 1px solid #999;
     box-shadow: 0 0 50px #171717;
+}
+
+#listHeader #title {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 32px;
+    padding: 0 10px;
+}
+
+#listHeader #clear {
+    position: absolute;
+    right: 0;
+    bottom: 31px;
+    opacity: .3;
+}
+
+#listHeader #clear svg {
+    width: 10px;
+    height: 10px;
+}
+
+#listHeader #clear line {
+    stroke: #eee;
+}
+
+#listHeader #clear:hover {
+    opacity: 1;
+}
+
+#listHeader #supp {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 17px;
+    font-size: 12px;
+    color: #9a9a9a;
+}
+
+#listHeader #counter {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 2px;
+    font-size: 12px;
+    color: #9a9a9a;
 }
 
 #clear {
