--- a/duma/style.css
+++ b/duma/style.css
@@ -26,8 +26,9 @@ h1 {
     display: block;
     top: 0;
     margin: 20px 0 40px;
-    left: 50%;
-    margin-left: -133px;
+    left: 0;
+    right: 0;
+    text-align: center;
     font-weight: normal;
     font-size: 18px;
     color: #eee;
