--- a/css/main.css
+++ b/css/main.css
@@ -18,35 +18,88 @@ body {
   margin-top: 60px;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
 }
 .content * {
   box-sizing: border-box;
 }
-.content__copy {
+.content__inner {
+  position: relative;
+  overflow: hidden;
+}
+.content__inner__copy {
   position: relative;
   font-size: 12px;
   text-align: right;
-  padding-right: 20px;
   margin-bottom: 40px;
   clear: both;
 }
+@media all and (max-width: 999px) {
+  .content__inner__copy {
+    text-align: center;
+  }
+}
+@media all and (max-width: 499px) {
+  .content__inner__copy {
+    font-size: 20px;
+  }
+}
 .card {
   position: relative;
+  display: block;
   float: left;
-  width: 480px;
-  height: 240px;
+  width: 50%;
   margin-bottom: 40px;
   color: #000;
+  overflow: hidden;
+  text-decoration: none;
 }
 .card:nth-child(2n) {
-  margin-left: 40px;
+  padding-left: 20px;
 }
-.card__main {
+.card:nth-child(2n + 1) {
+  padding-right: 20px;
+}
+@media all and (max-width: 999px) {
+  .card {
+    width: 100%;
+    max-width: 480px;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .card:nth-child(2n) {
+    padding-left: 0;
+  }
+  .card:nth-child(2n + 1) {
+    padding-right: 0;
+  }
+}
+@media all and (max-width: 499px) {
+  .card {
+    max-width: none;
+  }
+}
+.card__inner {
+  position: relative;
+}
+.card__inner__expander {
+  content: '';
+  position: relative;
+  box-sizing: content-box;
+  width: 100%;
+  height: 0;
+  padding-top: 50%;
+}
+@media all and (max-width: 499px) {
+  .card__inner__expander {
+    display: none;
+  }
+}
+.card__inner__main {
   position: absolute;
   left: 0;
   top: 0;
-  width: 240px;
+  width: 50%;
   height: 100%;
   padding: 20px;
   background-position: center center;
@@ -57,7 +110,108 @@ body {
   -webkit-transition: border 0.1s;
   transition: border 0.1s;
 }
-.card:not(.card--empty) .card__main:after {
+@media all and (max-width: 499px) {
+  .card__inner__main {
+    position: relative;
+    width: 100%;
+    height: auto;
+  }
+}
+.card__inner__desc {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  border: 1px solid #000;
+  border-left: none;
+  -moz-transition: border 0.1s, color 0.1s;
+  -o-transition: border 0.1s, color 0.1s;
+  -webkit-transition: border 0.1s, color 0.1s;
+  transition: border 0.1s, color 0.1s;
+  padding: 20px 40px 20px 20px;
+}
+@media all and (max-width: 499px) {
+  .card__inner__desc {
+    position: relative;
+    left: 0;
+    width: 100%;
+    height: auto;
+    border: none;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 24px;
+    padding-bottom: 60px;
+  }
+}
+.card__inner__desc a {
+  color: #000;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+}
+.card__inner__desc a:hover {
+  border-bottom: 3px double #000;
+}
+.card__inner__desc__header {
+  margin: 0;
+  font-size: 16px;
+  font-weight: normal;
+}
+@media all and (max-width: 499px) {
+  .card__inner__desc__header {
+    font-size: 30px;
+  }
+}
+.card__inner__desc__text {
+  font-size: 12px;
+  margin: 30px 0 0;
+  line-height: 1.5;
+}
+@media all and (max-width: 499px) {
+  .card__inner__desc__text {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+}
+.card__inner__desc__date {
+  position: absolute;
+  bottom: 10px;
+  font-size: 12px;
+}
+@media all and (max-width: 499px) {
+  .card__inner__desc__date {
+    position: relative;
+    bottom: 0;
+    margin-top: 20px;
+    font-size: 20px;
+    font-style: italic;
+    opacity: 0.3;
+  }
+}
+.card__inner__desc__supp {
+  display: none;
+}
+@media all and (max-width: 499px) {
+  .card:not(.card--empty) .card__inner__main {
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 0 0 100% 0;
+    border: none;
+  }
+  .card:not(.card--empty) .card__inner__main:before {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #000;
+    box-sizing: border-box;
+  }
+}
+.card:not(.card--empty) .card__inner__main:after {
   content: '';
   position: absolute;
   left: 0;
@@ -75,53 +229,36 @@ body {
 .card:not(.card--empty):hover {
   color: #555;
 }
-.card:not(.card--empty):hover .card__main {
+.card:not(.card--empty):hover .card__inner__main {
   border-color: #555;
 }
-.card:not(.card--empty):hover .card__main:after {
+.card:not(.card--empty):hover .card__inner__main:after {
   opacity: 0.7;
 }
-.card:not(.card--empty):hover .card__desc {
+.card:not(.card--empty):hover .card__inner__desc {
   border-color: #555;
 }
-.card__desc {
-  position: absolute;
-  left: 240px;
-  height: 100%;
-  width: 240px;
-  border: 1px solid #000;
-  border-left: none;
-  -moz-transition: border 0.1s, color 0.1s;
-  -o-transition: border 0.1s, color 0.1s;
-  -webkit-transition: border 0.1s, color 0.1s;
-  transition: border 0.1s, color 0.1s;
-  padding: 20px 40px 20px 20px;
-}
-.card__desc a {
-  color: #000;
-  text-decoration: none;
-  border-bottom: 1px solid #000;
-}
-.card__desc a:hover {
-  border-bottom: 3px double #000;
-}
-.card__desc__header {
-  margin: 0;
-  font-size: 16px;
-  font-weight: normal;
-}
-.card__desc__text {
-  font-size: 12px;
-  margin: 30px 0 0;
-  line-height: 1.5;
-}
-.card__desc__date {
-  position: absolute;
-  bottom: 10px;
-  font-size: 12px;
-}
-.card__desc__supp {
-  display: none;
+@media all and (max-width: 499px) {
+  .card--empty .card__inner__main {
+    padding: 0;
+    border: none;
+  }
+  .card--empty .card__inner__main h1 {
+    font-size: 42px;
+  }
+  .card--empty .card__inner__desc {
+    border: none;
+    padding: 20px 0 0 0;
+  }
+  .card--empty .card__inner__desc__header {
+    font-size: 30px;
+  }
+  .card--empty .card__inner__desc__text {
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    line-height: 1.5em;
+  }
 }
 h1 {
   margin: 0;
