--- a/css/main.styl
+++ b/css/main.styl
@@ -67,6 +67,9 @@ body
     margin-left auto
     margin-right auto
 
+    +respond-below(smScreen)
+        padding 0 .25 * cardMargin
+
     *
         box-sizing border-box
 
