--- a/css/main.styl
+++ b/css/main.styl
@@ -282,7 +282,7 @@ body
 
             .card__inner__desc
                 border none
-                padding cardPadding 0 0 0
+                padding 2 * cardPadding 0 0 0
 
                 &__header
                     font-size smallScreenFontHeaderSize
