--- a/inderx/css/help.styl
+++ b/inderx/css/help.styl
@@ -1,7 +1,10 @@
 
 $greyColor = #7e7e7e
 $lightGreyColor = #cecece
+$lightestGreyColor = #eee
 $pinkColor = #fd4f68
+$blueColor = #3ca3ff
+$greenColor = #4ccc93
 
 
 transform(t)
