--- a/inderx/css/l-screen.styl
+++ b/inderx/css/l-screen.styl
@@ -1,8 +1,3 @@
-@font-face
-    font-family 'NTR'
-    font-style normal
-    src url('http://fonts.googleapis.com/css?family=NTR')
-
 
 $screenWidth = 375px
 $screenHeight = 667px
@@ -14,6 +9,7 @@ body
     color #404040
 
     font-family 'NTR', sans-serif
+    line-height 1
 
     *
         box-sizing border-box
