--- a/inderx/css/main.css
+++ b/inderx/css/main.css
@@ -1,15 +1,11 @@
 
-@font-face {
-  font-family: 'NTR';
-  font-style: normal;
-  src: url("http://fonts.googleapis.com/css?family=NTR");
-}
 body {
   margin: 0;
   padding: 0;
   background: #000;
   color: #404040;
   font-family: 'NTR', sans-serif;
+  line-height: 1;
 }
 body * {
   box-sizing: border-box;
@@ -63,14 +59,30 @@ body * {
   width: 55px;
   height: 55px;
 }
+.m-button--big {
+  width: 60px;
+  height: 60px;
+}
 .m-button--like {
   background-image: url("../img/button_like.jpg");
+}
+.m-button--like.m-button--inverted {
+  background-color: #4ccc93;
+  background-image: url("../img/button_like_white.png");
 }
 .m-button--dislike {
   background-image: url("../img/button_cross.jpg");
 }
+.m-button--dislike.m-button--inverted {
+  background-color: #fd4f68;
+  background-image: url("../img/button_cross_white.png");
+}
 .m-button--superlike {
   background-image: url("../img/button_superlike.jpg");
+}
+.m-button--superlike.m-button--inverted {
+  background-color: #3ca3ff;
+  background-image: url("../img/button_superlike_white.png");
 }
 
 .m-mainview {
@@ -84,6 +96,7 @@ body * {
   background: -o-linear-gradient(#fff, #f6f7fb); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#fff, #f6f7fb); /* For Firefox 3.6 to 15 */
   background: linear-gradient(#fff, #f6f7fb); /* Standard syntax */
+  z-index: 1;
 }
 .m-mainview__header {
   position: absolute;
@@ -208,14 +221,14 @@ body * {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   padding: 0 20px;
-  font-size: 22px;
+  font-size: 28px;
 }
 .m-card__title__inner__name {
   font-weight: bold;
 }
 .m-card__title__inner__desc {
-  margin-top: 2px;
-  font-size: 14px;
+  margin-top: 0px;
+  font-size: 18px;
   color: #7e7e7e;
 }
 .m-card__title__inner__friends {
@@ -225,12 +238,12 @@ body * {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  font-size: 22px;
+  font-size: 30px;
   color: #fd4f68;
-  padding-left: 30px;
+  padding-left: 28px;
   background-image: url("../img/icon_friends.jpg");
   background-size: 26px;
-  background-position: left center;
+  background-position: left 3px;
   background-repeat: no-repeat;
 }
 .m-card__title__inner__interests {
@@ -240,15 +253,188 @@ body * {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  font-size: 22px;
+  font-size: 30px;
   color: #cecece;
-  padding-left: 30px;
+  padding-left: 28px;
   background-image: url("../img/icon_interests.jpg");
   background-size: 26px;
-  background-position: left center;
+  background-position: left 3px;
   background-repeat: no-repeat;
 }
 .m-card__title__inner__interests + .m-card__title__inner__friends {
   right: 85px;
 }
 
+.m-profile {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  z-index: 2;
+  background: #fff;
+  font-size: 18px;
+  padding-bottom: 150px;
+  display: none;
+}
+.m-profile__close {
+  position: fixed;
+  left: 10px;
+  top: 20px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: rgba(0,0,0,0.5);
+  background-image: url("../img/close.png");
+  background-size: cover;
+  background-position: center center;
+  z-index: 3;
+}
+.m-profile__buttons {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: #fff; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(rgba(255,255,255,0), #fff); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(255,255,255,0), #fff); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(255,255,255,0), #fff); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(255,255,255,0), #fff); /* Standard syntax */
+  z-index: 3;
+  text-align: center;
+  padding-top: 20px;
+}
+.m-profile__buttons > * {
+  display: inline-block;
+  margin: 0 15px;
+}
+.m-profile__photos {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  background: #eee;
+}
+.m-profile__info {
+  padding: 20px 15px;
+  border-bottom: 1px solid #eee;
+}
+.m-profile__info__name {
+  font-weight: bold;
+  font-size: 24px;
+}
+.m-profile__info__age {
+  font-size: 24px;
+}
+.m-profile__info__desc {
+  margin: 5px 0 0;
+  color: #7e7e7e;
+}
+.m-profile__profile {
+  padding: 15px 15px;
+  border-bottom: 1px solid #eee;
+  color: #7e7e7e;
+}
+.m-profile__friends {
+  padding: 15px 15px;
+  border-bottom: 1px solid #eee;
+  color: #7e7e7e;
+}
+.m-profile__friends__counter {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.m-profile__friends__container {
+  overflow: hidden;
+}
+.m-profile__friends__friend {
+  position: relative;
+  float: left;
+  width: 30%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 16px;
+  color: #7e7e7e;
+}
+.m-profile__friends__friend:nth-child(3n+2) {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.m-profile__friends__friend__photo {
+  width: 100%;
+  height: 0px;
+  padding-top: 100%;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center center;
+  margin-bottom: 5px;
+}
+.m-profile__interests {
+  padding: 15px 15px;
+  border-bottom: 1px solid #eee;
+  color: #7e7e7e;
+}
+.m-profile__interests__counter {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.m-profile__interests__item {
+  display: inline-block;
+  padding: 7px 10px;
+  border: 1px solid #fd4f68;
+  color: #fd4f68;
+  border-radius: 5px;
+  margin: 0 6px 7px 0;
+}
+.m-slider {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.m-slider__nav {
+  position: absolute;
+  top: 18px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
+}
+.m-slider__nav__item {
+  position: relative;
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #cecece;
+}
+.m-slider__nav__item + .m-slider__nav__item {
+  margin-left: 5px;
+}
+.m-slider__nav__item--active {
+  background: #fd4f68;
+}
+.m-slider__container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.m-slider__container.released {
+  transition: left 0.1s;
+}
+.m-slider__slide {
+  position: relative;
+  float: left;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+}
