--- a/css/project.css
+++ b/css/project.css
@@ -62,9 +62,6 @@ a:hover {
   background: #fff;
   padding-bottom: 20px;
 }
-.header p {
-  margin: 0;
-}
 .header__name {
   text-align: center;
   font-size: 30px;
@@ -72,9 +69,10 @@ a:hover {
   margin: 30px 0 20px;
 }
 .header__description {
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   font-size: 14px;
+  max-width: 700px;
 }
 .header__link {
   text-align: center;
@@ -83,6 +81,12 @@ a:hover {
   text-align: center;
   font-size: 11px;
   color: #999;
+}
+.subheader {
+  margin: 40px 0 20px;
+  font-size: 20px;
+  font-weight: normal;
+  text-align: center;
 }
 .screens {
   position: relative;
@@ -195,4 +199,50 @@ a:hover {
 }
 .screens__bottom__item--active:after {
   display: none;
+}
+.pictures {
+  margin-top: 50px;
+  max-width: 720px;
+  margin: 0 auto 50px;
+  overflow: hidden;
+}
+.pictures__item {
+  position: relative;
+  float: left;
+  width: 200px;
+  height: 192px;
+  margin: 30px 20px 20px;
+  text-align: center;
+  font-size: 12px;
+}
+.pictures__item img {
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+.video {
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  width: 680px;
+  height: 382px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.gesture {
+  position: absolute;
+  width: 57px;
+  height: 75px;
+  background-image: url("../img/tap.png");
+  background-size: cover;
+  z-index: 5;
+  left: 90px;
+  top: 140px;
+  opacity: 0.8;
+}
+.gesture--flicker {
+  background-image: url("../img/flicker.png");
+  left: 70px;
+  top: 140px;
 }
