--- a/css/project.styl
+++ b/css/project.styl
@@ -95,7 +95,7 @@ a
 
 
 .subheader
-    margin 40px 0 20px
+    margin 40px 0 30px
     font-size 20px
     font-weight normal
     text-align center
@@ -215,9 +215,8 @@ a
 
 
 .pictures
-    margin-top 50px
     max-width 720px
-    margin 0 auto 50px
+    margin 0px auto 30px
     overflow hidden
 
     &__item
@@ -225,7 +224,7 @@ a
         float left
         width 200px
         height 192px
-        margin 30px 20px 20px
+        margin 0px 20px 40px
 
         text-align center
         font-size 12px
@@ -236,7 +235,7 @@ a
             border-radius 10px
 
 .video
-    margin-top 30px
+    margin-top 0px
     margin-left auto
     margin-right auto
     margin-bottom 100px
@@ -254,7 +253,6 @@ a
     z-index 5
     left 90px
     top 140px
-    opacity .8
 
     &--flicker
         background-image url('../img/flicker.png')
