--- a/nesta/test/main.css
+++ b/nesta/test/main.css
@@ -20,3 +20,34 @@ svg .line polyline {
 .m-filters label {
 	display: block;
 }
+
+.m-key {
+	margin-top: 20px;
+}
+
+.m-key > div {
+	position: relative;
+	float: left;
+	width: 400px;
+	height: 50px;
+	margin-right: 10px;
+}
+
+.col-tip {
+	position: relative;
+	float: left;
+	width: 1px;
+	height: 10px;
+}
+
+.thick-tip {
+	position: relative;
+	float: left;
+	width: 10px;
+	height: 20px;
+	margin-right: 1px;
+	border-width: 0;
+	border-color: silver;
+	border-style: solid;
+	box-sizing: border-box;
+}
