--- a/nesta/networking_3/main.css
+++ b/nesta/networking_3/main.css
@@ -1,13 +1,19 @@
-.subunit.SCT { fill: #ddc; }
-.subunit.WLS { fill: #cdd; }
-.subunit.NIR { fill: #cdc; }
-.subunit.ENG { fill: #dcd; }
+.subunit.SCT { fill: #eee; }
+.subunit.WLS { fill: #ccc; }
+.subunit.NIR { fill: #eee; }
+.subunit.ENG { fill: #eee; }
 .subunit.IRL { fill: #eee; }
 
 .subunit-boundary {
   fill: none;
   stroke: #777;
   stroke-dasharray: 2,2;
+  stroke-linejoin: round;
+}
+
+.district-boundary {
+  fill: none;
+  stroke: red;
   stroke-linejoin: round;
 }
 
@@ -21,4 +27,8 @@
   font-size: 20px;
   font-weight: 300;
   text-anchor: middle;
+}
+
+.blured {
+	opacity: .1;
 }
