--- a/nesta/css/heatmap.css
+++ b/nesta/css/heatmap.css
@@ -1,6 +1,9 @@
 .vis--heatmap .vis__axis {
   font-size: 10px;
-  fill: #777;
+  fill: #999;
+}
+.vis--heatmap .vis__axis__tip.highlighted {
+  fill: #008000;
 }
 .vis--heatmap .vis__axis__tip.selected {
   font-weight: bold;
@@ -26,6 +29,10 @@
   text-anchor: middle;
   fill: #000;
   font-size: 10px;
+}
+.vis--heatmap .vis__graph__high-bg {
+  stroke: none;
+  fill: rgba(200,200,200,0.1);
 }
 .vis--heatmap .vis__graph__highlight {
   stroke: none;
