--- a/nesta/styl/heatmap.styl
+++ b/nesta/styl/heatmap.styl
@@ -1,9 +1,11 @@
 .vis--heatmap
 	.vis__axis
 		font-size 10px
-		fill #777
+		fill #999
 
 		&__tip
+			&.highlighted
+				fill green
 			&.selected
 				font-weight bold
 				fill #000
@@ -30,6 +32,10 @@
 				text-anchor middle
 				fill #000
 				font-size 10px
+
+		&__high-bg
+			stroke none
+			fill rgba(200, 200, 200, .1)
 
 		&__highlight
 			stroke none
