--- a/nesta/styl/bumpchart.styl
+++ b/nesta/styl/bumpchart.styl
@@ -3,16 +3,29 @@
 		font-size 10px
 
 		.tick
-			&.selected
-				font-weight bold
+			&.blured
+				text
+					opacity .2
 
 	.vis__graph
 		&__line
 			fill none
-			stroke-width 3
+			stroke-width 5
 
+			&.blured
+				opacity .2
+
+	.vis__hints
 		&__hint
 			pointer-events none
+
+			path
+				stroke #000
+				stroke-width 1
+				fill #fff
+
+			text
+				font-size 10px
 
 
 	.vis__legend
